syntax = "proto3";

package role;

option go_package = ".;pt";
import "google/api/annotations.proto";
import "proto/role/role_message.proto";

message UpsertRoleRequest {
    int64 id = 1 [jstype=JS_STRING];
    string code = 2;
    string name = 3;
    int32 sort = 4;
    int64 org_id = 5 [jstype=JS_STRING];
}

message UpsertRoleResponse {
    Role data = 1;
}

service RoleService {
  rpc UpsertHandler(UpsertRoleRequest) returns (UpsertRoleResponse) {
    option (google.api.http) = {
      post : "/role"
      body : "*"
    };
  };
}